<resources>
    <string name="app_name">Todo Note</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="tags">
        <item>No tag</item>
        <item>Important</item>
        <item>No important</item>
    </string-array>

    <string-array name="reminder_repeat_type">
        <item>None</item>
        <item>4 times a day reminder</item>
        <item>1 time reminder per day</item>
    </string-array>

    <string-array name="reminder_display_type">
        <item>Only notification</item>
        <item>Notification and open application with song</item>
        <item>Only open application with song</item>
    </string-array>

    <string name="id_ad_mob_pub">ca-app-pub-4871499696146883~1994613185</string>

    <!-- Buttons -->
    <string name="login">Login</string>
    <string name="no_account">No have account yet? Click here and create!</string>
    <string name="accept_privacy">Accept privacy policy</string>
    <string name="create_account">Create account</string>
    <string name="open_app">Open app</string>
    <string name="element_deleted">Element deleted</string>

    <!-- Hints -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="password_optional_hint">Password(optional)</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="username_hint">Username</string>
    <string name="search_hint">Search</string>
    <string name="repeat_hint">Repeat</string>
    <string name="display_hint">Display</string>
    <string name="title_hint">Title</string>
    <string name="create_element_hint">Tap to add item</string>
    <string name="update_user_data">Update user data</string>
    <string name="user_data">User data</string>
    <string name="privacy">Privacy</string>
    <string name="open_source">Open source</string>
    <string name="logout">Logout</string>
    <string name="undo">Undo</string>

    <!-- Texts -->
    <string name="edit_username">Edit\nUsername</string>
    <string name="review_app">Review app 😅</string>

    <!-- Texts with parameters -->
    <string name="last_edit">Edited\n%1s</string>
    <string name="add_tag_for_todo">Add tag for todo</string>

    <!-- MENU -->
    <string name="todo">TODO</string>
    <string name="profile">PROFILE</string>
    <string name="archive_todo">Archive todo</string>
    <string name="tags">Tags</string>
    <string name="reminders">Reminders</string>
    <string name="contact_with_me">Contact with me</string>
    <string name="send_feedback">Send feedback</string>
    <string name="settings">Settings</string>

</resources>
