<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pmprogramms.todo.LoginActivity">

    <ImageView
        android:id="@+id/icon_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/app_icon"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_below="@id/icon_app"
        android:layout_centerHorizontal="true"
        android:drawableEnd="@drawable/ic_baseline_alternate_email_24"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:autofillHints="@null" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text"
        android:layout_centerHorizontal="true"
        android:drawableEnd="@drawable/ic_baseline_lock_24"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:autofillHints="@null" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_login_background"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_login_background"
        android:text="@string/create_account"
        android:textColor="#ffffff" />
</RelativeLayout>
