<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/user_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/waveImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_wave_seven"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="32sp" />
    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/user_welcome"
        android:layout_marginTop="-40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:id="@+id/scroll_view_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                tools:ignore="UselessParent">

                <FrameLayout
                    android:id="@+id/container_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/container_profile_relative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/user_data"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:text="@string/user_data"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/privacy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/user_data"
                            android:padding="20dp"
                            android:text="@string/privacy"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/open_source"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/privacy"
                            android:padding="20dp"
                            android:text="@string/open_source"
                            android:textSize="24sp" />

                        <ImageButton
                            android:id="@+id/edit_userdata_button"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@null"
                            android:layout_alignTop="@+id/user_data"
                            android:layout_alignEnd="@+id/user_data"
                            android:layout_alignBottom="@+id/user_data"
                            android:layout_marginEnd="20dp"
                            android:src="@drawable/ic_baseline_edit_24"
                            android:contentDescription="@string/app_name" />

                        <Button
                            android:id="@+id/button_logout"
                            android:layout_width="400dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/open_source"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/button_login_background"
                            android:text="@string/logout"
                            android:textColor="#ffffff" />
                    </RelativeLayout>
                </FrameLayout>
            </ScrollView>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>
