<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".view.fragments.EditTodoFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:autofillHints="@null"
            android:background="#00FFFFFF"
            android:hint="@string/title_hint"
            android:inputType="none"
            android:paddingBottom="10dp"
            android:textSize="20sp" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_edit">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:id="@+id/box"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/box_new_item"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_add_box_gray_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="@string/create_element_hint"
                            android:textColor="#B9B9B9" />
                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </ScrollView>

    </RelativeLayout>

    <include
        android:id="@+id/colors_layout_edit"
        layout="@layout/colors_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/set_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/ic_bookmark_white_24dp"
        android:backgroundTint="@color/colorFAB"
        android:contentDescription="@string/app_name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorFAB"
        android:src="@drawable/ic_save_white_24dp"
        android:contentDescription="@string/app_name" />

</RelativeLayout>